fix: collapse (#404)

--- a/src/Collapse/index.less
+++ b/src/Collapse/index.less
@@ -83,7 +83,7 @@
       flex: 1;
       font-size: 30 * @rpx;
       font-family: PingFangSC-Regular;
-      color: #999;
+      color: @COLOR_TEXT_ASSIST;
       margin-right: 8 * @rpx;
     }
   }
@@ -117,12 +117,6 @@
         height: 0;
       }
     }
-  }
-  .collapse-line {
-    width: 100%;
-    position: absolute;
-    height: 1px;
-    color: red;
   }
 }
 
